--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     
+    <header>
+        <h1>header</h1>
+    </header>
 
+    <section>
+        <article><h1>article 1</h1></article>
+    </section>
+
+    <footer id="footer">
+        <span>&copy; Breno Silva</span>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
