Creating the header_menu

--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
 <body>
     
     <header>
-        <h1>header</h1>
+        <input type="checkbox" id="check">
+        <label for="check">
+        <img src="assets/button_menu.png" alt="botoes_menu" id="img_menu">
+        </label>
+        
+        <nav id="header">
+
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+
+        </nav>
     </header>
 
     <section>
-        <article><h1>article 1</h1></article>
+        <article>
+
+        </article>
     </section>
 
     <footer id="footer">
