--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Projetos</title>
 </head>
 <body>
-    
     <header>
-        <input type="checkbox" id="check">
+        <input type="checkbox" id="check" checked>
         <label for="check">
         <img src="assets/button_menu.png" alt="botoes_menu" id="img_menu">
         </label>
@@ -18,8 +16,8 @@
         <nav id="header">
 
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Projetos</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/projetos.html">Projetos</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -27,16 +25,11 @@
         </nav>
     </header>
 
-    <section>
-        <article>
 
-        </article>
-    </section>
 
     <footer id="footer">
         <span>&copy; Breno Silva</span>
 
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
