Pagina de sobre e otimização

--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+   
 </head>
 <body>
 
     <header>
         <input type="checkbox" id="check" checked>
-        <label for="check">
-        <img src="assets/button_menu.png" alt="botoes_menu" id="img_menu">
         </label>
         
         <nav id="header">
 
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/projetos.html">Projetos</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="https://www.cin.ufpe.br/~bsxs">Home</a></li>
+                <li><a  id="color"  href="https://www.cin.ufpe.br/~bsxs/projetos/projetos.html">Projetos</a></li>
+                <div class="mobile">
+                    <li><a href="https://www.cin.ufpe.br/~bsxs/sobre/sobre.html">Sobre</a></li>
+                </div>
                 <li><a href="#">Contato</a></li>
             </ul>
 
