--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -24,13 +24,24 @@
 
         </nav>
     </header>
-
     <section>
         <article class="projetos">
-            <h1>Meus projetos</h1>
+            <div id="info">
 
-            <iframe src="https://github.com/BrenoRev?tab=repositories" frameborder="0"></iframe>
+                <h2>Breno Silva Xavier de Souza</h2>
+                <ul>
+                    <li>Tenho 20 anos.</li>
+                    <li>Sou Desenvolvedor Web há 1 ano.</li>
+                    <li>Trabalho com Java e Angular.</li>
+                    
+                    <li>Auto-Didata em busca de novos desáfios.</li>
+                    <hr>
+                    <li>Cursando o 1º período de Ciência da Computação na UFPE.</li>
+                </ul>
+            </div>
+
         </article>
+
     </section>
 
     <footer id="footer">
