Pagina de Contato

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -25,9 +25,10 @@
         </nav>
     </header>
     <section>
-        <article class="projetos">
-           
-
+        <article id="tamanho">
+            <a href="https://www.linkedin.com/in/breno-silva-a868a5213/" target="_blank"><img src="../assets/linkedin.png" alt="linkedin"></a>
+            <a href="mailto:silvabreno462@gmail.com"><img src="../assets/gmail.png" alt="gmail"></a>
+            <a href="https://github.com/BrenoRev" target="_blank"><img src="../assets/github.png" alt="github"></a>
         </article>
 
     </section>
