--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="mobile">
                     <li><a href="https://www.cin.ufpe.br/~bsxs/sobre/sobre.html">Sobre</a></li>
                 </div>
-                <li><a href="#">Contato</a></li>
+                <li><a href="https://www.cin.ufpe.br/~bsxs/contato/contato.html">Contato</a></li>
             </ul>
 
         </nav>
