--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../assets/icon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <input type="checkbox" id="check" checked>
-        
+      <input type="checkbox" id="check" checked>
+      <label for="check">
+      <img src="../assets/button_menu.png" alt="botoes_menu" id="img_menu">
+      </label>
+
         <nav id="header">
 
             <ul>
@@ -3180,5 +3184,7 @@
         <span>&copy; Breno Silva</span>
 
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
