--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
-   
+    <link rel="shortcut icon" href="assets/icon.ico" type="image/x-icon">
 </head>
 <body>
 
